# cake-planner-backend

./: .gitignore  CMakeLists.txt  CakePlanner.env  Dockerfile
.gemini/: GEMINI.md
configure/: rz_config.hpp.in
include/: database.hpp  rz_config.hpp
include/controllers/: admin_controller.hpp  auth_controller.hpp  event_controller.hpp  user_controller.hpp
include/middleware/: auth_middleware.hpp
include/models/: event_model.hpp  user_model.hpp
include/services/: notification_service.hpp  smtp_service.hpp
include/utils/: env_loader.hpp  password_utils.hpp  seeder.hpp  token_utils.hpp  totp_utils.hpp
src/: database.cpp  main.cpp
src/controllers/: admin_controller.cpp  auth_controller.cpp  event_controller.cpp  user_controller.cpp
src/models/: config_model.cpp  event_model.cpp  user_model.cpp
src/services/: notification_service.cpp  smtp_service.cpp
src/utils/: env_loader.cpp  password_utils.cpp  seeder.cpp  token_utils.cpp  totp_utils.cpp
